--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,14 +2,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #000;
   color: #fff;
 }
 
 /* Header Styling */
 header {
-  background-image: url('/path-to-your-header-image.jpg'); /* Replace with your header background */
+  background-image: url("../../assets/Images/NavBar.jpeg"); /* Replace with your header background */
   background-size: cover;
   background-position: center;
   padding: 20px;
@@ -112,7 +112,7 @@ header .subtext {
 
 /* Footer Styling */
 footer {
-  background-image: url('/path-to-your-footer-image.jpg'); /* Replace with your footer background */
+  background-image: url("../../assets/Images/NavBar.jpeg");
   background-size: cover;
   background-position: center;
   padding: 20px;
